@@ -15,3 +15,4 @@ t/test.sh
 t/tlib/AllTests.pm
 t/tlib/Exception/BaseTest.pm
 META.yml
+README
